2002-07-11  Jakub Jelinek  <jakub@redhat.com>

	PR debug/7241
	* dwarf2out.c (base_type_die): Use DW_ATE_*_char even if main
	variant is char_type_node and type name is char.

2003-02-04  Jakub Jelinek  <jakub@redhat.com>

	* dwarf2out.c (dwarf2out_finish): Add AT_comp_dir
	attribute even if input file name is absolute, but one of the
	includes is relative.

2001-10-12  Jakub Jelinek  <jakub@redhat.com>

	* unwind-dw2.c (frame_state_296): New type.
	(__frame_state_for): Add compatibility code with early gcc-2.96-RH.

2003-05-15  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>

	* doc/invoke.texi (Warning Options): Mark -Wmissing-declarations
	as a C only option.

2003-05-15  Wolfgang Bangerth <bangerth@dealii.org>

	* doc/bugreport.texi: Remove most of the bug reporting
	instructions and merge them into bugs.html.

2003-05-14  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* sparc.c (print_operand): Fix uninitialized warning.

2003-05-14  Mark Mitchell  <mark@codesourcery.com>

	* version.c: Reset to prerelease format.
	* doc/include/gcc-common.texi: Update version number.

2003-05-13  Release Manager

	* GCC 3.3 Released.

2003-05-13  Release Manager

	* GCC 3.3 Released.

2003-05-13  Release Manager

	* GCC 3.3 Released.

2003-05-13  Release Manager

	* GCC 3.3 Released.

2003-05-12  Mark Mitchell  <mark@codesourcery.com>

	PR other/10745
	* configure.in: Correct detection of GNU ld version number.
	* configure: Regenerated.

2003-05-08  J"orn Rennecke <joern.rennecke@superh.com>

	* sh.c (gen_block_redirect, split_branches): Use
	CODE_FOR_jump_compact instead of CODE_FOR_jump

2003-05-06  Eric Christopher  <echristo@redhat.com>

        * config/mips/linux.h: Fix typo.

2003-05-06  Ulrich Weigand  <uweigand@de.ibm.com>

	PR other/10650
	* unwind-dw2.c (uw_update_context_1): Don't set sp as cfa on s390.
	(uw_init_context_1): Set initial sp to outer cfa on s390.

2003-05-06  Mark Mitchell  <mark@codesourcery.com>

	PR other/10658