@@ -1,3 +1,8 @@
+2001-10-31  Jakub Jelinek  <jakub@redhat.com>
+
+	* unwind-dw2-fde.c (fde_merge): Choose just one from FDEs for the
+	same function in erratic array.
+
 2002-07-11  Jakub Jelinek  <jakub@redhat.com>
 
 	PR debug/7241
